# ZeroManual

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/security/: audit-status.json
.claude/helpers/: statusline.js
apps/: __init__.py  zeromanual_env.py
apps/agents/: __init__.py  accounting_es.py  ai_engine.py  ai_mixin.py  base.py  billing_ops.py  delivery_manager.py  governance_compliance.py  sales_pipeline.py
apps/commercial/: __init__.py  config.py
apps/common/: tax_id.py
apps/integrations/: __init__.py  accounting_export.py  google_oauth.py  invoice_pdf.py  n8n_client.py  ops_bridge.py  settings.py  smtp_client.py
apps/interface/: __init__.py  admin.html  api.py  client.html  nl.py  ui.html
apps/llm/: __init__.py  claude_client.py
apps/orchestrator/: __init__.py  audit.py  config.py  handoffs.py  main.py  models.py  registry.py  runtime.py  store.py
apps/triggers/: __init__.py  config.py  detector.py  dispatcher.py  email_watcher.py  models.py  runner.py
apps/web/: README.md
docs/: architecture.md  brand.md  integrations.md  operations.md  opscenter-split.md  triggers.md  vps-hostinger.md  web-integration.md
docs/agents/: README.md  agent-accounting-assistant-es.md  agent-billing-ops.md  agent-client-delivery-manager.md  agent-governance-compliance.md  (+1 more)
infra/: docker-compose.yml  vps-install-ollama-qwen3.sh
tests/: test_agents.py  test_api.py  test_nl.py  test_ops_bridge.py  test_orchestrator.py  test_store.py  test_tax_id.py
(+28 files in other folders)
