[project]
name = "zeromanual"
version = "0.2.0"
description = "ZeroManual — web comercial y portal cliente (ops en OpsCenter)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "apps",
  "apps.commercial",
  "apps.interface",
  "apps.integrations",
  "apps.web",
]
